# next-extract-Japan-

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .prettierrc.js  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/analyze/buyer-needs/: route.ts
app/api/crawl/: route.ts
app/api/import/: route.ts
app/api/import/kokuzei/: route.ts
app/api/import/sales-now/: route.ts
app/api/import/shoukou-research/: IT × 派遣 ～50億円（詳細）.csv  aVB-Report-Ver3.0詳細.csv  route - Copy.ts  route.js  route.ts
app/api/import/zenkoku-houjin/: route.ts
lib/: prisma.ts
prisma/: schema.prisma
programs/crawl/: Cargo.toml
programs/crawl/src/: main.rs
programs/sales-now/: Cargo.toml
programs/sales-now/src/: main.rs
programs/zenkoku-houjin/: Cargo.toml
programs/zenkoku-houjin/src/: main.rs
