[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "blocking", "json"] }
spider = { version = "1.46.3", features = ["budget"] }
regex = "1"
once_cell = "1.18.0"
encoding_rs = "0.8.33"
serde = "1.0.189"
serde_json = "1.0.107"
url = "2"
scraper = "0.17.1"
openssl = { version = "0.10", features = ["vendored"] }
